@@ -29,7 +29,7 @@ my $build = Module::Build->new(
     requires => {
         'perl'              => '5.010',
         'Alien::BWIPP'      => '0.006',
-        'Capture::Tiny'     => 0,
+        'IO::CaptureOutput' => '1.1102',
         'GSAPI'             => '0.5',
         'List::Util'        => 0,
         'Moose'             => '0.93',
