@@ -23,26 +23,26 @@ name: PostScript-Barcode
 provides:
   PostScript::Barcode:
     file: lib/PostScript/Barcode.pm
-    version: 0.005
+    version: 0.006
   PostScript::Barcode::GSAPI::Singleton:
     file: lib/PostScript/Barcode/GSAPI/Singleton.pm
-    version: 0.005
+    version: 0.006
   PostScript::Barcode::Meta::Types:
     file: lib/PostScript/Barcode/Meta/Types.pm
-    version: 0.005
+    version: 0.006
   PostScript::Barcode::azteccode:
     file: lib/PostScript/Barcode/azteccode.pm
-    version: 0.005
+    version: 0.006
   PostScript::Barcode::datamatrix:
     file: lib/PostScript/Barcode/datamatrix.pm
-    version: 0.005
+    version: 0.006
   PostScript::Barcode::qrcode:
     file: lib/PostScript/Barcode/qrcode.pm
-    version: 0.005
+    version: 0.006
 requires:
   Alien::BWIPP: 0.006
-  Capture::Tiny: 0
   GSAPI: 0.5
+  IO::CaptureOutput: 1.1102
   List::Util: 0
   Moose: 0.93
   MooseX::Singleton: 0.22
@@ -51,4 +51,4 @@ resources:
   bugtracker: http://github.com/daxim/PostScript-Barcode/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/daxim/PostScript-Barcode
-version: 0.005
+version: 0.006
