@@ -1,6 +1,6 @@
 =encoding UTF-8
 
-PostScript-Barcode version 0.005 is Copyright © 2010, Lars Dɪᴇᴄᴋᴏᴡ
+PostScript-Barcode version 0.006 is Copyright © 2010, Lars Dɪᴇᴄᴋᴏᴡ
 
 =head1 NAME
 
@@ -37,11 +37,11 @@ Perl 5.10, L<Module::Build>
 
 =head3 core modules
 
-Perl 5.10
+Perl 5.10, L<List::Util>
 
 =head3 CPAN modules
 
-L<Alien::BWIPP>, L<GSAPI>, L<Moose>, L<Moose::Role>,
+L<Alien::BWIPP>, L<IO::CaptureOutput>, L<GSAPI>, L<Moose>, L<Moose::Role>,
 L<Moose::Util::TypeConstraints>, L<MooseX::Singleton>
 
 =head2 Build and test time
